fixed whitespace bug and fixed header icon

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,10 @@
   height: 100vh;
   width: 100vw;
 }
+html {
+  padding: 0px 0px 0px 0px;
+}
+body {
+  padding: 0px 0px 0px 0px;
+  margin: 0px 0px 0px 0px;
+}
