--- a/src/Components/Cells.css
+++ b/src/Components/Cells.css
@@ -1,6 +1,4 @@
 .cellsLayout {
-  padding-top: 30vh;
-  padding-bottom: 30vh;
   background-image: url("../images/leaf2.png");
   background-size: 90%;
   background-repeat: no-repeat;
